--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     },
     "dependencies": {
         "@headlessui/react": "^2.2.0",
+        "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/react": "^2.1.4",
         "@radix-ui/react-avatar": "^1.1.3",
         "@radix-ui/react-checkbox": "^1.1.4",
